@@ -4,7 +4,7 @@
 # Created: 1993-05-16
 # Public domain
 
-# $Id: mkinstalldirs,v 1.5 2004/01/30 20:00:16 rusfidogate Exp $
+# $Id: mkinstalldirs,v 1.6 2004/02/05 06:26:03 rusfidogate Exp $
 
 errstatus=0
 
