@@ -2,7 +2,7 @@
 /*****************************************************************************
  * FIDOGATE --- Gateway UNIX Mail/News <-> FTN NetMail/EchoMail
  *
- * $Id: areafix.c,v 1.6 2004/01/28 00:14:50 rusfidogate Exp $
+ * $Id: areafix.c,v 1.7 2004/02/05 06:26:03 rusfidogate Exp $
  *
  * Common Areafix functions
  *
@@ -1350,12 +1350,15 @@ int cmd_list(Node *node, int flag)	/* FALSE -> %avail; TRUE -> %list */
 {
     AreasBBS *p;
     LON *l;
-    char *s;
+    char *s, *mark;
     int key_ok;
     int list_f=FALSE;
 #ifdef AFSEND_ECHO_STATUS
     char tmp[35];
 #endif /* AFSEND_ECHO_STATUS */
+#ifdef FTN_ACL
+    char *mark_r, *mark_m;
+#endif /* FTN_ACL */
 #ifdef AF_AVAIL
     int print_all = FALSE;
 #endif /* AF_AVAIL */
@@ -1398,10 +1401,6 @@ int cmd_list(Node *node, int flag)	/* FALSE -> %avail; TRUE -> %list */
     if (flag == TRUE || !(s = cf_get_string("AvailFile", TRUE)))
     {
 #endif
-	char *mark;
-#ifdef FTN_ACL
-	char *mark_r, *mark_m;
-#endif /* FTN_ACL */
 	for(p=areasbbs_first(); p; p=p->next)
 	{
 
